discussion/kv_engine/158672/158672_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

wip

Change-Id: I3a14dbb18422cb6574214b711bc88fd1c9a99504

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-08-03 19:46:26.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-03 21:14:25.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38304/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc(14): fatal error C1083: Cannot open include file: "ab-kvstore-transaction-context.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38304/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11072/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:14:10: error: "ab-kvstore-transaction-context.h" file not found [clang-diagnostic-error]
#include "ab-kvstore-transaction-context.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11072/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:14:10:
error: "ab-kvstore-transaction-context.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11072/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32666/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:14:10:
fatal error: "ab-kvstore-transaction-context.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32666/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12855/ : FAILURE

Compile error at [2021-08-03T21:10:37.673Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:14:10:
fatal error: ab-kvstore-transaction-context.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12855/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13211/ : FAILURE

Compile error at [2021-08-03T21:11:48.044Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:14:10:
fatal error: "ab-kvstore-transaction-context.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13211/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12667/ : FAILURE

Compile error at [2021-08-03T21:12:42.767Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:14:10:
fatal error: ab-kvstore-transaction-context.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12667/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20751/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/698/ : FAILURE

Compile error at [2021-08-03T21:11:19.508Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:14:10:
fatal error: "ab-kvstore-transaction-context.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/698/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/680/ : FAILURE

Compile error at [2021-08-03T19:50:47.358Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:14:10:
fatal error: ab-kvstore-transaction-context.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/680/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11783/ : FAILURE

Compile error at [2021-08-03T20:16:39.550Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:14:10:
fatal error: "ab-kvstore-transaction-context.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11783/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9749/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
